# jukebot

./: Cargo.toml
src/: auth.rs  main.rs
src/commands/: album.rs  albums.rs  artist.rs  artists.rs  clear.rs  mod.rs  pause.rs  play.rs  playing.rs  queue.rs  rescan.rs  skip.rs
