[package]
name = "jukebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = "0.12"
color-eyre = "0.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
mpd = "0.1.0"
